--- a/autobuild.config.json
+++ b/autobuild.config.json
@@ -1,7 +1,7 @@
 {
 	"platform": "32-bit",
-	"notify-email":"roman@spoon.net"
-	  "version-reader": {
+	"notify-email":"roman@spoon.net",
+	"version-reader": {
 		"type":"maven",
 		"group":"org.eclipse.jetty",
 		"artifactId":"jetty-server",
