Filter versions of netty

--- a/autobuild.config.json
+++ b/autobuild.config.json
@@ -5,6 +5,7 @@
 		"type":"maven",
 		"group":"org.eclipse.jetty",
 		"artifactId":"jetty-server",
+		"filter":".*\\.v.*",
 		"repo":"http://repo1.maven.org/maven2/"
 	  }
 }
